# double-ratchet-rs

./: Cargo.toml  LICENSE  README.md
benches/: double_ratchet_bench.rs
src/: aead.rs  dh.rs  header.rs  kdf_chain.rs  kdf_root.rs  lib.rs  ratchet.rs
tests/: mod.rs
