[package]
name = "double-ratchet-rs"
authors = ["satvrn", "Hannes Furmans"]
description = "A pure Rust implementation of the Double Ratchet Algorithm as specified by Signal."
homepage = "https://github.com/notsatvrn/double-ratchet-rs"
repository = "https://github.com/notsatvrn/double-ratchet-rs"
readme = "README.md"
keywords = ["double-ratchet", "crypto", "cryptography", "signal"]
version = "0.4.3"
edition = "2021"
license = "MIT"

[dependencies]
x25519-dalek = {version = "2.0.0-pre.1", default-features = false, features = ["serde", "u64_backend"]}
rand_core = "0.6"
hkdf = "0.12"
hmac = "0.12"
aes-gcm-siv = "0.11"
sha2 = {version = "0.10", default-features = false}
serde = {version = "1", default-features = false, features = ["derive"]}
postcard = {version = "1", default-features = false, features = ["alloc"]}
hashbrown = {version = "0.13", features = ["serde"]}
zeroize = {version = "1.5", default-features = false, features = ["zeroize_derive"]}

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "double_ratchet_bench"
harness = false

[profile.release]
lto = true
