[package]
name = "double-ratchet-rs"
authors = ["satvrn", "Hannes Furmans"]
description = "A pure Rust implementation of the Double Ratchet algorithm as described by Signal."
homepage = "https://github.com/notsatvrn/double-ratchet-rs"
repository = "https://github.com/notsatvrn/double-ratchet-rs"
readme = "README.md"
keywords = ["double-ratchet", "crypto", "cryptography", "signal"]
version = "0.4.6"
edition = "2021"
license = "MIT"

[dependencies]
x25519-dalek = {version = "2.0.0-rc.3", default-features = false, features = ["serde", "static_secrets", "zeroize"]}
rand_core = "0.6"
hkdf = "0.12"
hmac = "0.12"
aes-gcm-siv = "0.11"
sha2 = {version = "0.10", default-features = false}
serde = {version = "1.0", default-features = false, features = ["derive"]}
postcard = {version = "1.0", default-features = false, features = ["alloc"]}
hashbrown = {version = "0.14", features = ["serde"], optional = true}
zeroize = {version = "1.6", default-features = false, features = ["zeroize_derive"]}

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "double_ratchet_bench"
harness = false

[profile.release]
lto = true

[features]
default = ["hashbrown"]
std = ["sha2/std", "serde/std", "postcard/use-std", "zeroize/std"]
